Add link to GH page.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h2>Migration's Missing Instruction Manual</h2>
             </div>
             <p>Drupal Camp Atlanta<br/><span class="small">November 10, 2018</span></p>
+            <p><a class="small-link" href="https://startinggravity.github.io/migration-presentation">https://startinggravity.github.io/migration-presentation</a></p>
             <aside class="notes">
                 Welcome.
             </aside>
