Update Jim's bio
Also add DC Chattanooga to title page.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h2>Migration's Missing Instruction Manual</h2>
             </div>
             <p>Drupal Camp Atlanta<br/><span class="small">November 10, 2018</span></p>
+            <p>Drupal Camp Chattanooga<br/><span class="small">June 8, 2019</span></p>
             <p><a class="small-link" href="https://startinggravity.github.io/migration-presentation">https://startinggravity.github.io/migration-presentation</a></p>
             <aside class="notes">
                 Welcome.
@@ -40,7 +41,7 @@
         <section id="intro-jim" data-background="images/background.jpg" data-transition="none">
             <h2>Jim Smith</h2>
             <img src="images/jns.jpg" alt="Jim Smith">
-            <p>Drupal Developer<br/><span class="small">Oak Ridge National Lab</span></p>
+            <p>Freelance Drupal Developer<br/><span class="small">Oak Ridge</span></p>
             <aside class="notes">
                 Jim: Introduction
             </aside>
