--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
         <section id="example-2" data-background="images/background.jpg" data-transition="none">
                 <img class="stretch plain" src="images/primary_org.png" alt="Migrating the Primary Org field">
                 <aside class="notes">
-                    Derek: Here's a tricky one that's not immediatly obvious: the static map plugin does not set the default value when the source is empty. That causes an error. Therefore, if you always want a value to be set, then you must ensure that the source is not empty. Notice also that we're using the callback plugin. This plugin lets you send data to any php function. Here we're using array_filter and reset. These are two php array functions that you can call directly within your migration file. The only catch is that you have cannot provide any options. So if you need to do something more complicated, write a custom process plugin.
+                    Derek: This a tricky one that's not immediatly obvious: the static map plugin does not set the default value when the source is empty. That causes an error. Therefore, if you always want a value to be set, then you must ensure that the source is not empty. Notice also that we're using the callback plugin. This plugin lets you send data to any php function. Here we're using array_filter and reset. These are two php array functions that you can call directly within your migration file. The only catch is that you have cannot provide any options. So if you need to do something more complicated, write a custom process plugin.
                 </aside>
             </section>
         <section id="example-3" data-background="images/background.jpg" data-transition="none">
@@ -628,7 +628,7 @@
         <section id="example-5" data-background="images/background.jpg" data-transition="none">
                 <img class="stretch plain" src="images/make_unique.png" alt="The make_unique custom plugin">
                 <aside class="notes">
-                    Jim: Here is the make_unique plugin. Not much too it, but it saved us a ton of cleanup work.
+                    Jim: Here is the make_unique plugin. Not much to it, but it saved us a ton of cleanup work.
                 </aside>
             </section>
         <!-- <section id="example-6" data-background="images/background.jpg" data-transition="none"> -->
